# mini_workflow

./: .gitignore  CMakeLists.txt  Note.md  Note_02_SeriesTask.md  Note_03_Epoller.md  Note_04_HttpClient.md  Note_05_ComplexTasks.md  Note_05_TaskFactory.md  Note_06_HttpServer.md  Note_07_Https_SSL.md  Note_SeriesTask.md  README.md
include/: HttpMessages.h  MyEpollPoller.h  MyGoTask.h  MyHttpClientTask.h  MyHttpServer.h  MyParallelWork.h  MyScheduler.h  MySeriesWork.h  MyTask.h  MyTaskFactory.h  MyWaitGroup.h  SslHandshakeTask.h
src/: HttpMessages.cc  MyEpollPoller.cc  MyHttpClientTask.cc  MyHttpServer.cc  MyParallelWork.cc  MyScheduler.cc  MySeriesWork.cc  MyTaskFactory.cc  main.cc  test_http_server.cc
